Fix the hover boxshadow on small icon buttons

--- a/ux/src/style/sass/common.scss
+++ b/ux/src/style/sass/common.scss
@@ -59,7 +59,7 @@ $sublte-text-shadow: 1px 1px 5px black;
   &:hover {
     color: map-get($colors, active);
     background-color: transparent;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 5px 10px rgba(0,0,0,0.22);
+    box-shadow: none;
   }
 }
 
